Use wasm identification backend for native-image